--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,4 +1,4 @@
-<ion-tabs>
-  <ion-tab [root]="tab1Root" tabTitle="Home" tabIcon="home"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Feed" tabIcon="paper"></ion-tab>
+<ion-tabs color="primary">
+  <ion-tab [root]="tab4Root" tabTitle="Imóveis" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab1Root" tabTitle="feed" tabIcon="paper"></ion-tab>
 </ion-tabs>
